# OpenCL-Tutorial-in-Codes

./: CMakeLists.txt  README.md  cl_tools.hpp  main.cpp
Learning/: hello_world_kernels.cpp  platform_and_device.cpp
kernels/: helloworld.cl
